# space-ranger

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg
examples/: example.py
logs/: profile-2b638d9a-b3e4-4a55-a166-44398a0f63ed.prof
src/space_ranger/: __init__.py  __main__.py  app.py  ctx.py  globals.py  logging.py  settings.py
src/space_ranger/application/: __init__.py  application.py
src/space_ranger/asset/: asset.py  music_asset.py  sound_asset.py
src/space_ranger/assets/images/: bullet.png-autosave.kra  controls.kra  controls.kra~  controls.png~  cursor.jpg-autosave.kra  particle_shoot.kra  particle_shoot.png~  shooter.png~  some_calc.kra
src/space_ranger/assets_manager/: __init__.py  asset.py  assets_manager.py  font_asset.py  image_asset.py  music_asset.py  sound_asset.py
src/space_ranger/common/: __init__.py  color.py  position.py
src/space_ranger/core/: __init__.py  _ctx.py  animation.py  application.py  camera.py  common.py  component.py  ec_table.py  ecs_manager.py  entity.py  errors.py  game_object.py  has_children.py  plugin.py  properties_observer.py  property.py  resource.py  scene.py  system.py  utils.py
src/space_ranger/core/asset/: __init__.py  asset.py  font_asset.py  image_asset.py
src/space_ranger/core/builtin/: window.py
src/space_ranger/core/common/: __init__.py  color.py  missing.py
src/space_ranger/core/component/: __init__.py  _component.py  camera.py  debug.py  physics_body.py  script.py  sprite.py  transform.py
src/space_ranger/core/ecs/: __init__.py  component.py  ecs_manager.py  entity.py  system.py
src/space_ranger/core/game_object/: _game_object.py  button_object.py  text_object.py
src/space_ranger/core/game_object_property/: __init__.py  _game_object_property.py  color_property.py  font_property.py  int_property.py  position_property.py  text_property.py
src/space_ranger/core/logging/: logger_mixin.py  logging.py
src/space_ranger/core/property/: __init__.py  _base.py  _properties_observer.py  _property.py  angle.py  bool.py  color.py  float.py  font.py  int.py  string.py  vector2.py
src/space_ranger/core/system/: __init__.py  _system.py  debug_system.py  rendering_system.py  scripting_system.py  sprite_rotation_system.py
src/space_ranger/logging/: __init__.py  logging.py
src/space_ranger/prefabs/: __init__.py  button.py  checkbox.py  rectangle.py  slider.py  text.py  ui_elem.py
src/space_ranger/property/: __init__.py  color_property.py  font_property.py  int_property.py  position_property.py  text_property.py
src/space_ranger/scenes/: __init__.py  main_menu.py  playgroud.py
src/space_ranger/settings/: __init__.py  settings.py
src/space_ranger/states/: __init__.py  _base.py  main_menu.py
src/space_ranger/ui/: __init__.py  button.py  position2.py  text.py  ui_element.py  ui_element_abc.py
tests/: __init__.py  component_inheritance_test.py  conftest.py  descriptor_test.py  dummy_test.py
tests/test_core/: __init__.py  test_component.py  test_ec_table.py  test_entity.py  test_generate_entity_uid.py
