[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=space_ranger",
    # generate report with details of all (non-pass) test results
    "-ra",
    # show local variables in tracebacks
    "--showlocals",
    # verbose output
    "--verbose",
]
norecursedirs = [
    ".git",
    ".pytest_cache",
    ".vscode",
    ".venv",
    "migrations",
]
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude =  '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | .venv
)/
'''

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
py_version = 311
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
skip = [
    "build/",
    "dist/",
    "docs/",
    ".git",
    ".eggs",
    "__pycache__",
    "*.egg-info",
    ".gitignore",
    "README.md",
    "scratches/",
]

[tool.pydocstyle]
match-dir = "(?!tests)(?!resources)(?!docs)[^\\.].*"
match = "(?!test)(?!setup)[^\\._].*\\.py"
inherit = false
ignore = [
    "D200", 
    "D203", 
    "D213", 
    "D406", 
    "D407",
    "D107",
]   # Google conventions

[tool.mypy]
mypy_path = "src"

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
# disallow_subclassing_any = true
# disallow_untyped_decorators = true
# disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
# warn_return_any = true